More space to issues scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -11,19 +11,19 @@
 }
 
 .column::-webkit-scrollbar {
-    width: 5px;
-    padding: 10px;
+    width: 10px;
 }
 
 /* Track */
 .column::-webkit-scrollbar-track {
-    border-radius: 5px;
 }
 
 /* Handle */
 .column::-webkit-scrollbar-thumb {
-    background: #9fafdb;
-    border-radius: 5px;
+    background-color: #9fafdb;
+    border: 3px solid transparent;
+    border-radius: 10px;
+    background-clip: content-box;
 }
 
 /* Handle on hover */
